Add content for good-old-fasion-pancakes.html

--- a/recipes/good-old-fasion-pancakes.html
+++ b/recipes/good-old-fasion-pancakes.html
@@ -13,9 +13,27 @@
     <p>"Everyone loves pancakes. You know it and I know it. So why should you choose to make my pancakes over anyone elses?"
     </p>
     <p>
-        "What makes my pancakes so good isn't that they were made with love. Although they are. What "
+        "What makes my pancakes so good isn't that they were made with love. Although they are. What makes my pancakes so good is countless hours of honing this recipe to a science. <strong>Keep reading to learn how you can make my good old fashion pancakes!</strong>"
     </p>
-
+    <h2>The Ingredients</h2>
+    <p>
+        <ul>
+            <li>1/2 Cups All-Purpose Flour</li>
+            <li>3 and 1/2 Teaspoons Baking Powder</li>
+            <li>1/4 Teaspoon Salt</li>
+            <li>1 Tablespoon White Sugar</li>
+            <li>1 and 1/4 Cups Milk</li>
+            <li>1 Egg</li>
+            <li>3 Tablespoons Melted Butter</li>
+        </ul>
+    </p>
+    <h2>How To Make Good Old Fashion Pancakes</h2>
+    <p>
+        <ol>
+            <li>In a large bowl, sift together the flour, baking powder, salt and sugar. Make a well in the center and pour in the milk, egg and melted butter; mix until smooth.</li>
+            <li>Heat a lightly oiled griddle or frying pan over medium-high heat. Pour or scoop the batter onto the griddle, using approximatley 1/4 cup for each pancake. Brown both sides and serve hot.</li>
+        </ol>
+    </p>
 
 </body>
 </html>
