Remove all unnessary quotes

--- a/recipes/good-old-fasion-pancakes.html
+++ b/recipes/good-old-fasion-pancakes.html
@@ -10,10 +10,10 @@
     <h1>Good Old Fashion Pancakes</h1>
     <image src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F17%2F21014-Good-old-Fashioned-Pancakes-mfs_002.jpg"></image>
     <h2>What Makes My Pancakes So Good?</h2>
-    <p>"Everyone loves pancakes. You know it and I know it. So why should you choose to make my pancakes over anyone elses?"
+    <p>Everyone loves pancakes. You know it and I know it. So why should you choose to make my pancakes over anyone elses?
     </p>
     <p>
-        "What makes my pancakes so good isn't that they were made with love. Although they are. What makes my pancakes so good is countless hours of honing this recipe to a science. <strong>Keep reading to learn how you can make my good old fashion pancakes!</strong>"
+        What makes my pancakes so good isn't that they were made with love. Although they are. What makes my pancakes so good is countless hours of honing this recipe to a science. <strong>Keep reading to learn how you can make my good old fashion pancakes!</strong>
     </p>
     <h2>The Ingredients</h2>
     <p>
