--- a/recipes/old-fashioned-lemonade.html
+++ b/recipes/old-fashioned-lemonade.html
@@ -10,8 +10,8 @@
     <h1>Old Fashioned Lemonade</h1>
     <image src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Ff4a149e73b01cfec2baea60bf63cc04b%2F1654458175image.jpg&w=596&h=399&c=sc&poi=face&q=60"></image>
     <h2>What Is Old Fashioned Lemonade</h2>
-   <p>"Old fashioned lemonade is a classic drink that anyone can enjoy. Your kids could even make it to sell to the neighbors. It is super easy and fun to make!</p>
-   <p>"This is the perfect family recipe to use as a teaching moment. Or you could just serve it up on a hot day! <strong>Keep reading for more on how to make your own Old Fashioned Lemonade</strong>"</p>
+   <p>Old fashioned lemonade is a classic drink that anyone can enjoy. Your kids could even make it to sell to the neighbors. It is super easy and fun to make!</p>
+   <p>This is the perfect family recipe to use as a teaching moment. Or you could just serve it up on a hot day! <strong>Keep reading for more on how to make your own Old Fashioned Lemonade</strong>"</p>
     <h2>The Ingredients</h2>
     <p>
         <ul>
