--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 <body>
     <h1>Odin Recipes</h1>
     <p>
-    <a href="recipes/tomato_salad.html">"Tomato Salad Recipe"</a>
+    <a href="recipes/tomato_salad.html">Tomato Salad Recipe</a>
     </p>
     <p>
-    <a href="recipes/good-old-fasion-pancakes.html">"Good Old Fasion Pancakes Recipe"</a>
+    <a href="recipes/good-old-fasion-pancakes.html">Good Old Fasion Pancakes Recipe</a>
     </p>    
     <p>
-        <a href="recipes/old-fashioned-lemonade.html">"Good Old Fashioned Lemonade"</a>
+        <a href="recipes/old-fashioned-lemonade.html">Good Old Fashioned Lemonade</a>
     </p>
 </body>
 </html>
