Replace main image

--- a/recipes/good-old-fasion-pancakes.html
+++ b/recipes/good-old-fasion-pancakes.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Good Old Fashion Pancakes</h1>
-    <image src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fstatic.onecms.io%2Fwp-content%2Fuploads%2Fsites%2F43%2F2022%2F02%2F17%2F21014-Good-old-Fashioned-Pancakes-mfs_002.jpg"></image>
+    <image src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fpublic-assets.meredithcorp.io%2Fed07114896fb3e9a2c90c8950d018808%2F165737927320220709_110740.jpg&w=596&h=596&c=sc&poi=face&q=60"></image>
     <h2>What Makes My Pancakes So Good?</h2>
     <p>Everyone loves pancakes. You know it and I know it. So why should you choose to make my pancakes over anyone elses?
     </p>
